--- a/index.html
+++ b/index.html
@@ -68,7 +68,18 @@
             "https://github.com/hamza",
             "https://linkedin.com/in/hamza"
           ],
-          "knowsAbout": ["Web Development", "Full-Stack Development", "React", "Node.js", "PostgreSQL", "AWS", "TypeScript", "DevOps", "Performance Optimization", "SEO"],
+          "knowsAbout": [
+            "Web Development",
+            "Full-Stack Development",
+            "React",
+            "Node.js",
+            "PostgreSQL",
+            "AWS",
+            "TypeScript",
+            "DevOps",
+            "Performance Optimization",
+            "SEO"
+          ],
           "award": "Core Web Vitals Grade A",
           "alumniOf": {
             "@type": "Organization",
@@ -122,7 +133,12 @@
       rel="stylesheet"
     />
     <!-- Preload hero images -->
-    <link rel="preload" as="image" href="/src/assets/svg/hero-vscode-bg.svg" fetchpriority="high" />
+    <link
+      rel="preload"
+      as="image"
+      href="/src/assets/svg/hero-vscode-bg.svg"
+      fetchpriority="high"
+    />
   </head>
   <body class="bg-gray-900 text-gray-100 page-intro-init">
     <div
@@ -141,7 +157,11 @@
       <div id="intro-logo-host" class="z-10"></div>
     </div>
     <!-- Header / Navbar -->
-    <header data-sticky class="fixed inset-x-0 top-0 z-50 transition-colors" role="banner">
+    <header
+      data-sticky
+      class="fixed inset-x-0 top-0 z-50 transition-colors"
+      role="banner"
+    >
       <div class="px-3 sm:px-4 my-2">
         <nav
           class="container-pro glass-professional rounded-full flex h-16 items-center justify-between"
@@ -159,9 +179,9 @@
               <span>Hamza</span>
             </a>
             <div class="hidden md:flex items-center gap-2 text-sm">
-              <a href="index.html" class="nav-link">Home</a>
-              <a href="./src/pages/about.html" class="nav-link">About</a>
-              <a href="./src/pages/blog.html" class="nav-link">Blog</a>
+              <a href="/index.html" class="nav-link">Home</a>
+              <a href="/pages/about.html" class="nav-link">About</a>
+              <a href="/pages/blog.html" class="nav-link">Blog</a>
               <!-- Work dropdown (hover) -->
               <div class="relative group">
                 <button
@@ -203,25 +223,25 @@
                     >Testimonials</a
                   >
                   <a
-                    href="./src/pages/case-studies.html"
+                    href="/pages/case-studies.html"
                     class="nav-link w-full"
                     role="menuitem"
                     >Case Studies</a
                   >
                   <a
-                    href="./src/pages/blog.html"
+                    href="/pages/blog.html"
                     class="nav-link w-full"
                     role="menuitem"
                     >Blog</a
                   >
                 </div>
               </div>
-              <a href="./src/pages/services.html" class="nav-link">Services</a>
-              <a href="./src/pages/contact.html" class="nav-link">Contact</a>
+              <a href="/pages/services.html" class="nav-link">Services</a>
+              <a href="/pages/contact.html" class="nav-link">Contact</a>
             </div>
           </div>
           <div class="hidden md:flex items-center gap-2">
-            <a href="#shop" aria-label="Shop" class="btn-minimal">
+            <a href="/pages/services.html" aria-label="Services" class="btn-minimal">
               <svg
                 width="18"
                 height="18"
@@ -248,7 +268,7 @@
                 <circle cx="18" cy="20" r="1.5" fill="currentColor" />
               </svg>
             </a>
-            <a href="./src/pages/contact.html" class="btn-minimal">Hire Me</a>
+            <a href="/pages/contact.html" class="btn-minimal">Hire Me</a>
           </div>
           <button
             data-mobile-nav-toggle
@@ -270,7 +290,7 @@
         aria-label="Mobile navigation"
       >
         <div class="container-pro py-4 flex flex-col gap-3">
-          <a href="./src/pages/about.html" class="nav-link">About</a>
+          <a href="/pages/about.html" class="nav-link">About</a>
           <div data-submenu-container>
             <button
               class="w-full flex items-center justify-between py-2"
@@ -298,16 +318,16 @@
             <div class="ml-3 mt-1 hidden flex-col" data-submenu>
               <a href="#projects" class="nav-link">Projects</a>
               <a href="#testimonials" class="nav-link">Testimonials</a>
-              <a href="./src/pages/case-studies.html" class="nav-link"
+              <a href="/pages/case-studies.html" class="nav-link"
                 >Case Studies</a
               >
-              <a href="./src/pages/blog.html" class="nav-link">Blog</a>
+              <a href="/pages/blog.html" class="nav-link">Blog</a>
             </div>
           </div>
-          <a href="./src/pages/services.html" class="nav-link">Services</a>
-          <a href="./src/pages/contact.html" class="nav-link">Contact</a>
+          <a href="/pages/services.html" class="nav-link">Services</a>
+          <a href="/pages/contact.html" class="nav-link">Contact</a>
           <div class="flex gap-3 pt-2">
-            <a href="#shop" aria-label="Shop" class="btn-ghost">
+            <a href="/pages/services.html" aria-label="Services" class="btn-ghost">
               <svg
                 width="18"
                 height="18"
@@ -334,7 +354,7 @@
                 <circle cx="18" cy="20" r="1.5" fill="currentColor" />
               </svg>
             </a>
-            <a href="./src/pages/contact.html" class="btn-minimal">Hire Me</a>
+            <a href="/pages/contact.html" class="btn-minimal">Hire Me</a>
           </div>
         </div>
       </div>
@@ -371,14 +391,31 @@
           class="absolute top-0 left-0 h-full w-screen -translate-x-1/2 bg-gradient-to-r from-blue-600/20 via-indigo-600/15 to-blue-500/20 blur-3xl"
         ></div>
         <!-- Professional floating elements -->
-        <div class="absolute top-20 left-20 w-2 h-2 bg-blue-400/35 rounded-full animate-pulse"></div>
-        <div class="absolute top-40 right-32 w-1 h-1 bg-indigo-400/45 rounded-full animate-pulse" style="animation-delay: 1s"></div>
-        <div class="absolute bottom-32 left-1/3 w-3 h-3 bg-blue-300/30 rounded-full animate-pulse" style="animation-delay: 2s"></div>
-        <div class="absolute top-1/2 right-20 w-1.5 h-1.5 bg-indigo-300/35 rounded-full animate-pulse" style="animation-delay: 0.5s"></div>
+        <div
+          class="absolute top-20 left-20 w-2 h-2 bg-blue-400/35 rounded-full animate-pulse"
+        ></div>
+        <div
+          class="absolute top-40 right-32 w-1 h-1 bg-indigo-400/45 rounded-full animate-pulse"
+          style="animation-delay: 1s"
+        ></div>
+        <div
+          class="absolute bottom-32 left-1/3 w-3 h-3 bg-blue-300/30 rounded-full animate-pulse"
+          style="animation-delay: 2s"
+        ></div>
+        <div
+          class="absolute top-1/2 right-20 w-1.5 h-1.5 bg-indigo-300/35 rounded-full animate-pulse"
+          style="animation-delay: 0.5s"
+        ></div>
 
         <!-- Professional accent lines -->
-        <div data-parallax="-0.06" class="absolute top-1/3 left-0 w-32 h-px bg-gradient-to-r from-transparent via-blue-500/15 to-transparent"></div>
-        <div data-parallax="-0.05" class="absolute bottom-1/3 right-0 w-24 h-px bg-gradient-to-l from-transparent via-indigo-500/15 to-transparent"></div>
+        <div
+          data-parallax="-0.06"
+          class="absolute top-1/3 left-0 w-32 h-px bg-gradient-to-r from-transparent via-blue-500/15 to-transparent"
+        ></div>
+        <div
+          data-parallax="-0.05"
+          class="absolute bottom-1/3 right-0 w-24 h-px bg-gradient-to-l from-transparent via-indigo-500/15 to-transparent"
+        ></div>
       </div>
       <div
         data-hero-spotlight
@@ -469,7 +506,7 @@
               Start a Project
             </a>
             <a
-              href="./src/pages/about.html"
+              href="/pages/about.html"
               class="btn-ghost text-base px-8 py-4 hover:scale-105 transition-transform duration-300"
             >
               Learn More
@@ -1703,7 +1740,11 @@
     </section>
 
     <!-- About -->
-    <section id="about" class="py-20 bg-black relative overflow-hidden cv-auto" aria-labelledby="about-heading">
+    <section
+      id="about"
+      class="py-20 bg-black relative overflow-hidden cv-auto"
+      aria-labelledby="about-heading"
+    >
       <!-- Background decoration -->
       <div
         class="absolute inset-0 bg-grid opacity-20"
@@ -1899,7 +1940,7 @@
           <!-- Actions -->
           <div class="mt-8 flex flex-wrap gap-3">
             <a href="#contact" class="btn-primary">Work with me</a>
-            <a href="./src/pages/resume.html" class="btn-ghost"
+            <a href="/pages/resume.html" class="btn-ghost"
               >Download Resume</a
             >
           </div>
@@ -2333,7 +2374,7 @@
                 class="hover:text-white"
                 href="https://github.com/hamza"
                 target="_blank"
-                rel="noopener"
+                rel="noopener noreferrer"
                 >GitHub</a
               >
               <span class="opacity-40">•</span>
@@ -2341,7 +2382,7 @@
                 class="hover:text-white"
                 href="https://linkedin.com/in/hamza"
                 target="_blank"
-                rel="noopener"
+                rel="noopener noreferrer"
                 >LinkedIn</a
               >
             </div>
@@ -2415,6 +2456,5 @@
     {{> footer}}
 
     <script type="module" src="/src/scripts/main.js"></script>
-    
   </body>
 </html>
