--- a/404.html
+++ b/404.html
@@ -1,10 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>404 — Page Not Found | Hamza Arya</title>
-    <meta name="description" content="The page you are looking for doesn't exist or has been moved." />
+    <meta
+      name="description"
+      content="The page you are looking for doesn't exist or has been moved."
+    />
     <meta name="robots" content="noindex" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <!-- Performance hints -->
@@ -13,10 +16,15 @@
   </head>
   <body class="bg-gray-900 text-gray-100">
     <!-- Header -->
-    <header class="sticky top-0 z-40 border-b border-white/10 bg-gray-900/70 backdrop-blur">
+    <header
+      class="sticky top-0 z-40 border-b border-white/10 bg-gray-900/70 backdrop-blur"
+    >
       <div class="container-pro h-14 flex items-center justify-between">
         <a href="/index.html" class="flex items-center gap-2 font-semibold">
-          <span class="inline-flex h-8 w-8 items-center justify-center rounded-md bg-gradient-to-br from-blue-600 to-indigo-600 text-white">H</span>
+          <span
+            class="inline-flex h-8 w-8 items-center justify-center rounded-md bg-gradient-to-br from-blue-600 to-indigo-600 text-white"
+            >H</span
+          >
           <span>Hamza</span>
         </a>
         <nav class="hidden sm:flex items-center gap-2">
@@ -27,64 +35,105 @@
     </header>
 
     <!-- 404 Content -->
-    <section class="relative py-32 bg-black overflow-hidden min-h-[80vh] flex items-center">
+    <section
+      class="relative py-32 bg-black overflow-hidden min-h-[80vh] flex items-center"
+    >
       <!-- Professional animated background -->
       <div class="absolute inset-0 pointer-events-none" aria-hidden="true">
-        <div class="absolute inset-0 bg-mesh-grid animate-grid-move opacity-25"></div>
-        <div class="absolute inset-0 bg-grid animate-grid-move opacity-60"></div>
+        <div
+          class="absolute inset-0 bg-mesh-grid animate-grid-move opacity-25"
+        ></div>
+        <div
+          class="absolute inset-0 bg-grid animate-grid-move opacity-60"
+        ></div>
         <div class="absolute inset-0 bg-grid-dots opacity-15"></div>
-        <div class="absolute top-0 left-0 h-full w-screen -translate-x-1/2 bg-gradient-to-r from-blue-600/20 via-indigo-600/15 to-cyan-500/20 blur-3xl"></div>
+        <div
+          class="absolute top-0 left-0 h-full w-screen -translate-x-1/2 bg-gradient-to-r from-blue-600/20 via-indigo-600/15 to-cyan-500/20 blur-3xl"
+        ></div>
       </div>
 
       <div class="container-pro relative z-20">
         <div class="max-w-2xl mx-auto text-center">
-          <div class="opacity-0 translate-y-6 animate-fade-in" style="animation: fadeIn 0.6s ease-out forwards;">
+          <div
+            class="opacity-0 translate-y-6 animate-fade-in"
+            style="animation: fadeIn 0.6s ease-out forwards"
+          >
             <!-- 404 Number -->
             <div class="mb-8">
-              <h1 class="text-8xl sm:text-9xl font-bold bg-gradient-to-r from-blue-600 via-indigo-600 to-purple-600 bg-clip-text text-transparent">
+              <h1
+                class="text-8xl sm:text-9xl font-bold bg-gradient-to-r from-blue-600 via-indigo-600 to-purple-600 bg-clip-text text-transparent"
+              >
                 404
               </h1>
             </div>
 
-            <h2 class="text-3xl sm:text-4xl font-bold mb-4">
-              Page Not Found
-            </h2>
+            <h2 class="text-3xl sm:text-4xl font-bold mb-4">Page Not Found</h2>
             <p class="text-gray-300 text-lg md:text-xl mb-8 leading-relaxed">
-              The page you are looking for doesn't exist or has been moved. It might have been deleted, renamed, or never existed.
+              The page you are looking for doesn't exist or has been moved. It
+              might have been deleted, renamed, or never existed.
             </p>
 
             <div class="glass rounded-2xl p-6 mb-8 text-left max-w-md mx-auto">
               <h3 class="font-semibold text-white mb-4">What can you do?</h3>
               <ul class="space-y-3 text-sm text-gray-300">
                 <li class="flex items-start gap-3">
-                  <span class="flex-shrink-0 w-6 h-6 rounded-full bg-blue-500/20 border border-blue-500/30 flex items-center justify-center text-blue-400 text-xs font-semibold">1</span>
+                  <span
+                    class="flex-shrink-0 w-6 h-6 rounded-full bg-blue-500/20 border border-blue-500/30 flex items-center justify-center text-blue-400 text-xs font-semibold"
+                    >1</span
+                  >
                   <span>Check the URL for typos</span>
                 </li>
                 <li class="flex items-start gap-3">
-                  <span class="flex-shrink-0 w-6 h-6 rounded-full bg-blue-500/20 border border-blue-500/30 flex items-center justify-center text-blue-400 text-xs font-semibold">2</span>
+                  <span
+                    class="flex-shrink-0 w-6 h-6 rounded-full bg-blue-500/20 border border-blue-500/30 flex items-center justify-center text-blue-400 text-xs font-semibold"
+                    >2</span
+                  >
                   <span>Go back to the homepage</span>
                 </li>
                 <li class="flex items-start gap-3">
-                  <span class="flex-shrink-0 w-6 h-6 rounded-full bg-blue-500/20 border border-blue-500/30 flex items-center justify-center text-blue-400 text-xs font-semibold">3</span>
-                  <span>Use the navigation menu to find what you're looking for</span>
+                  <span
+                    class="flex-shrink-0 w-6 h-6 rounded-full bg-blue-500/20 border border-blue-500/30 flex items-center justify-center text-blue-400 text-xs font-semibold"
+                    >3</span
+                  >
+                  <span
+                    >Use the navigation menu to find what you're looking
+                    for</span
+                  >
                 </li>
               </ul>
             </div>
 
             <div class="flex flex-col sm:flex-row gap-4 justify-center">
               <a href="/index.html" class="btn-primary">
-                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="mr-2">
-                  <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+                <svg
+                  width="16"
+                  height="16"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  class="mr-2"
+                >
+                  <path
+                    d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
+                  ></path>
                   <polyline points="9 22 9 12 15 12 15 22"></polyline>
                 </svg>
                 Go Home
               </a>
               <a href="/pages/blog.html" class="btn-secondary">View Blog</a>
-              <a href="/pages/projects.html" class="btn-secondary">View Projects</a>
+              <a href="/pages/projects.html" class="btn-secondary"
+                >View Projects</a
+              >
             </div>
 
             <p class="text-sm text-gray-400 mt-8">
-              If you believe this is an error, please <a href="/pages/contact.html" class="text-blue-400 hover:text-blue-300 underline">contact me</a>.
+              If you believe this is an error, please
+              <a
+                href="/pages/contact.html"
+                class="text-blue-400 hover:text-blue-300 underline"
+                >contact me</a
+              >.
             </p>
           </div>
         </div>
@@ -93,11 +142,25 @@
 
     <!-- Footer -->
     <footer class="py-10 border-t border-white/10">
-      <div class="container-pro flex flex-col sm:flex-row items-center justify-between gap-4 text-sm text-gray-300">
+      <div
+        class="container-pro flex flex-col sm:flex-row items-center justify-between gap-4 text-sm text-gray-300"
+      >
         <p>© <span id="year"></span> Hamza. All rights reserved.</p>
         <div class="flex items-center gap-4">
-          <a class="hover:text-white" href="https://github.com/hamza" target="_blank" rel="noopener">GitHub</a>
-          <a class="hover:text-white" href="https://linkedin.com/in/hamza" target="_blank" rel="noopener">LinkedIn</a>
+          <a
+            class="hover:text-white"
+            href="https://github.com/hamza"
+            target="_blank"
+            rel="noopener"
+            >GitHub</a
+          >
+          <a
+            class="hover:text-white"
+            href="https://linkedin.com/in/hamza"
+            target="_blank"
+            rel="noopener"
+            >LinkedIn</a
+          >
         </div>
       </div>
       <script>
