--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -49,6 +49,210 @@
         <p class="text-white/90 text-xl mt-4">Tell me about your idea, timeline, and goals.</p>
       </div>
     </section>
+    <section
+        id="contact"
+        class="relative py-24 bg-black overflow-hidden cv-auto"
+        aria-labelledby="contact-heading"
+      >
+        <!-- Background decoration -->
+        <div
+          class="absolute inset-0 bg-grid opacity-20"
+          data-parallax="0.02"
+        ></div>
+        <div
+          class="absolute top-0 right-0 w-96 h-96 bg-indigo-500/5 rounded-full blur-3xl"
+          data-parallax="0.05"
+        ></div>
+        <div
+          class="absolute bottom-0 left-0 w-80 h-80 bg-blue-500/5 rounded-full blur-3xl"
+          data-parallax="0.08"
+        ></div>
+
+        <div class="container-pro relative">
+          <div class="grid gap-10 lg:grid-cols-2 items-start">
+            <!-- Left: Copy / Contact details -->
+            <div data-reveal class="opacity-0 translate-y-6">
+              <div
+                class="glass-professional rounded-full px-5 py-2 inline-flex items-center gap-2 w-max mb-6"
+              >
+                <span
+                  class="h-2 w-2 rounded-full bg-emerald-400 animate-pulse glow-professional"
+                ></span>
+                <span
+                  class="text-xs tracking-wide uppercase text-white/90 font-medium"
+                  >Available for new projects</span
+                >
+              </div>
+              <h2 id="contact-heading" class="text-4xl font-bold mb-3">
+                Let's build <span class="text-gradient">something great</span>
+              </h2>
+              <p class="text-gray-300 text-lg max-w-prose">
+                Tell me about your idea, timeline, and goals. I typically reply
+                within 24 hours.
+              </p>
+
+              <div class="mt-8 grid gap-4">
+                <div class="inline-flex items-center gap-3 text-gray-300">
+                  <svg
+                    width="18"
+                    height="18"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                    aria-hidden="true"
+                  >
+                    <path
+                      d="M4 4h16v16H4z"
+                      stroke="currentColor"
+                      stroke-width="2"
+                    />
+                    <path
+                      d="M22 6l-10 7L2 6"
+                      stroke="currentColor"
+                      stroke-width="2"
+                    />
+                  </svg>
+                  <a
+                    class="hover:text-white underline decoration-white/20 underline-offset-4"
+                    href="mailto:hamzaarya123@gmail.com"
+                    >hamzaarya123@gmail.com</a
+                  >
+                </div>
+                <div class="inline-flex items-center gap-3 text-gray-300">
+                  <svg
+                    width="18"
+                    height="18"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                    aria-hidden="true"
+                  >
+                    <path
+                      d="M3 11a9 9 0 1 0 18 0A9 9 0 0 0 3 11zm9-5v6l4 2"
+                      stroke="currentColor"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
+                  <span>Response time: under 24 hours</span>
+                </div>
+                <div class="inline-flex items-center gap-3 text-gray-300">
+                  <svg
+                    width="18"
+                    height="18"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                    aria-hidden="true"
+                  >
+                    <path
+                      d="M21 10c0 6-9 12-9 12S3 16 3 10a9 9 0 1 1 18 0z"
+                      stroke="currentColor"
+                      stroke-width="2"
+                    />
+                    <circle
+                      cx="12"
+                      cy="10"
+                      r="3"
+                      stroke="currentColor"
+                      stroke-width="2"
+                    />
+                  </svg>
+                  <span>Based in Kabul, AF • Remote-friendly</span>
+                </div>
+              </div>
+
+              <div class="mt-8 flex items-center gap-4 text-sm text-gray-300">
+                <a
+                  class="hover:text-white transition-colors"
+                  href="https://github.com/hamzaarya"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="GitHub profile"
+                  >GitHub</a
+                >
+                <span class="opacity-40">•</span>
+                <a
+                  class="hover:text-white transition-colors"
+                  href="https://linkedin.com/in/hamzaarya"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="LinkedIn profile"
+                  >LinkedIn</a
+                >
+              </div>
+            </div>
+
+            <!-- Right: Contact form -->
+            <div data-reveal class="opacity-0 translate-y-6">
+              <div class="glass rounded-2xl p-6 sm:p-8 border border-white/10">
+                <form data-contact class="grid gap-4">
+                  <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+                    <label class="sr-only" for="contact-name">Name</label>
+                    <input
+                      class="input"
+                      type="text"
+                      name="name"
+                      id="contact-name"
+                      placeholder="Your name"
+                      required
+                    />
+                    <label class="sr-only" for="contact-email">Email</label>
+                    <input
+                      class="input"
+                      type="email"
+                      name="email"
+                      id="contact-email"
+                      placeholder="Email"
+                      required
+                    />
+                  </div>
+                  <label class="sr-only" for="contact-brief"
+                    >Project brief</label
+                  >
+                  <textarea
+                    class="input min-h-[160px]"
+                    name="brief"
+                    id="contact-brief"
+                    placeholder="Project brief (goals, timeline, scope)"
+                    required
+                  ></textarea>
+                  <label class="sr-only" for="contact-budget">Budget</label>
+                  <input
+                    class="input"
+                    type="text"
+                    name="budget"
+                    id="contact-budget"
+                    placeholder="Budget (optional)"
+                  />
+                  <!-- Honeypot -->
+                  <input
+                    type="text"
+                    name="website"
+                    tabindex="-1"
+                    autocomplete="off"
+                    class="hidden"
+                    aria-hidden="true"
+                  />
+                  <div class="flex items-center gap-3 pt-2">
+                    <button class="btn-primary" type="submit">Send</button>
+                    <a class="btn-ghost" href="mailto:hamzaarya123@gmail.com"
+                      >Email me</a
+                    >
+                  </div>
+                  <p
+                    data-contact-status
+                    role="status"
+                    aria-live="polite"
+                    class="text-sm text-gray-300 hidden"
+                  ></p>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
     <!-- Full content identical to pages/contact.html (hero, methods, form, FAQ) -->
 
